# efficient-agent-protocol

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  app.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  openclaw-interop.yml  release.yml  security.yml
agent/: __init__.py  agent_client.py  compiler.py
agent/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py
clients/typescript/: package.json
deploy/self_hosted/: .env.example  Dockerfile  docker-compose.yml
docs/: README.md  architecture.md  benchmarks.md  competitive_reference_profiles.json  competitive_thresholds.json  configuration.md  custom_tool_authoring.md  distributed_execution.md  eap_proof_sheet.md  eval_baseline.json  eval_thresholds.json  evaluation_harness.md  execution_protocol.md  maintainer_runbook.md  migrations.md  observability.md  openclaw_interop.md  operator_telemetry_pack.md  performance_tuning.md  phase10_competitiveness_hardening_roadmap.md  phase11_typing_rigor_completion_roadmap.md  phase12_v1_launch_readiness_roadmap.md  phase5_recommendation_readiness_checklist.md  phase7_competitive_openclaw_roadmap.md  phase7_tranche4_scope.md  phase8_adoption_limits_closure_roadmap.md  phase9_production_readiness_roadmap.md  plugin_spec.md  pointer_internals.md  release.md  release_notes_template.md  remote_ops_governance.md  sdk_contract.md  self_hosted_control_plane.md  slo_sla_guidance.md  soak_chaos_baseline.json  soak_chaos_reliability.md  soak_chaos_thresholds.json  state_backup_restore.md  storage_backends.md  (+12 more)
docs/dashboards/: grafana_eap_overview.json
docs/releases/: v0.1.8.md
docs/starter_packs/: README.md  doc_ops.md  local_etl.md  research_assistant.md
eap/: __init__.py  workflow_helpers.py
eap/agent/: __init__.py  agent_client.py  compiler.py
eap/environment/: __init__.py  (+4 more)
environment/: __init__.py  distributed_executor.py  executor.py  mcp_client.py  openclaw_client.py  plugin_loader.py  safe_eval.py  tool_registry.py
examples/: 01_minimal.py  02_multi_tool_dag.py  03_retry_and_recovery.py  README.md  __init__.py  demo_executor.py  legacy_ping_pong.py  multi_agent_handshake.py  new_efficient_flow.py  real_file_test.py  self_healing_flow.py  test_async_dag.py  test_registry.py  view_state.py  web_voyager_test.py
examples/plugins/sample_plugin/: README.md  pyproject.toml
examples/plugins/sample_plugin/sample_plugin/: __init__.py
protocol/: __init__.py  logging_config.py  migrations.py  models.py  settings.py  state_manager.py
scripts/: bootstrap_local.py  bootstrap_local.sh  check_v1_contract.py  competitive_benchmark_suite.py  eap_doctor.py  eap_onboarding_wizard.py  eap_operator_ui.py  eap_runtime_service.py  eap_state_backup.py  eap_state_healthcheck.py  eap_support_bundle.py  eval_scorecard.py  export_audit_bundle.py  export_metrics.py  export_telemetry_pack.py  interop_openclaw_smoke.sh  migrate_state_db.py  self_hosted_stack_smoke.py  soak_chaos_scorecard.py  v1_readiness_gatepack.py  verify_audit_bundle.py  verify_proof_sheet.py  verify_upgrade_from_baseline.py
starter_packs/: __init__.py  doc_ops.py  local_etl.py  research_assistant.py
tests/: conftest.py
(+130 files in other folders)
