[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efficient-agent-protocol"
version = "0.1.8"
description = "Local-first framework for multi-step tool workflows with pointer-backed state and DAG execution."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.14"

dependencies = [
  "pydantic==2.6.1",
  "requests==2.32.4",
  "beautifulsoup4==4.12.3",
]

[project.urls]
Homepage = "https://github.com/GenieWeenie/efficient-agent-protocol"
Documentation = "https://github.com/GenieWeenie/efficient-agent-protocol/tree/main/docs"
Repository = "https://github.com/GenieWeenie/efficient-agent-protocol"
Issues = "https://github.com/GenieWeenie/efficient-agent-protocol/issues"
Changelog = "https://github.com/GenieWeenie/efficient-agent-protocol/tree/main/docs/releases"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "pre-commit>=3.7.0",
  "mypy>=1.11.0",
]
storage = [
  "redis>=5.0.0",
  "psycopg[binary]>=3.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "environment*", "protocol*", "eap*", "starter_packs*"]
exclude = ["examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: cross-module integration tests",
  "packaging: package installation smoke tests",
]

[tool.coverage.run]
branch = true
source = ["protocol", "agent", "environment", "eap", "starter_packs"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "environment.safe_eval",
  "environment.executor",
  "eap.runtime.auth_scopes",
  "eap.runtime.guardrails",
]
strict = true
disallow_any_explicit = true
